--- a/WebApplication1/Views/Account/Index.cshtml
+++ b/WebApplication1/Views/Account/Index.cshtml
@@ -10,64 +10,67 @@
     <div asp-validation-summary="All"></div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="FirstName">Your name:</label>
+        <label asp-for="FirstName">Imię:</label>
 
-        <input asp-for="FirstName" />
+        <input asp-for="FirstName" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="Surname">Your name:</label>
+        <label asp-for="Surname">Nazwisko:</label>
 
-        <input asp-for="Surname" />
+        <input asp-for="Surname" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="Email">Your name:</label>
+        <label asp-for="Email">Email:</label>
 
-        <input asp-for="Email" />
+        <input asp-for="Email" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="Password">Your name:</label>
+        <label asp-for="Password">Hasło:</label>
 
-        <input asp-for="Password" />
+        <input asp-for="Password" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="ConfirmPassword">Your name:</label>
+        <label asp-for="ConfirmPassword">Powtórz hasło:</label>
 
-        <input asp-for="ConfirmPassword" />
+        <input asp-for="ConfirmPassword" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="PhoneNumber">Your name:</label>
+        <label asp-for="PhoneNumber">Numer telefonu:</label>
 
-        <input asp-for="PhoneNumber" />
+        <input asp-for="PhoneNumber" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="Age">Your name:</label>
+        <label asp-for="Age">Wiek:</label>
 
-        <input asp-for="Age" />
+        <input asp-for="Age" data-input-clear />
     </div>
 
     <div class="d-flex gap-2 align-items-center">
-        <label asp-for="City">Your name:</label>
+        <label asp-for="City">Miasto:</label>
 
-        <select asp-for="City" asp-items="Html.GetEnumSelectList<CityEnum>()"></select>
+        <select asp-for="City" asp-items="Html.GetEnumSelectList<CityEnum>()" data-select-clear></select>
     </div>
 
-    <input type="submit" value="Zarejestruj się" />
+    <input type="submit" value="Zarejestruj się" class="btn btn-primary" />
 </form>
 
-<button onclick="clear">Wyczyść</button>
+<button class="btn btn-danger mt-2" data-clear-btn>Wyczyść</button>
 
 <script>
-const inputs = document.querySelectorAll('input')
+const clearBtn = document.querySelector('[data-clear-btn]')
+const inputs = document.querySelectorAll('[data-input-clear]')
+const select = document.querySelector('[data-select-clear]')
 
-const clear = () => {
-    inputs.forEach(el => {
-        el.value = ''
+clearBtn?.addEventListener('click', () => {
+    inputs.forEach(input => {
+        input.value = ''
     })
-}
+    select.value = 0;
+})
 </script>
