--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    
+                    <a class="btn btn-primary ms-auto" asp-area="" asp-controller="Account" asp-action="Index">Zarejestruj się</a>
                 </div>
             </div>
         </nav>
